--- a/style/master.css
+++ b/style/master.css
@@ -244,7 +244,13 @@ strong{
 }
 
 .mobile .menu{
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    right: 0;
     display: none;
+    border: none;
+    z-index: 4;
 }
 
 .menu h4{
