--- a/style/master.css
+++ b/style/master.css
@@ -26,20 +26,15 @@ strong{
 }
 
 .header{
-    
     text-align: center;
     position: absolute;
-    
     top: 0;
     right: 0;
     left: 0;
-    
     height: 40px;
-    
     background: #121212;
     background: -moz-linear-gradient(100% 100% 90deg, #111, #333);
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#111));
-    
     color: #FFF;
 }
 
@@ -81,7 +76,7 @@ strong{
 .header .rooms-menu{
     position: absolute;
     top: 5px;
-    left: 10px;
+    left: 5px;
     display: none;
 }
 
@@ -96,9 +91,28 @@ strong{
     text-decoration: none;
     display: block;
     padding: 8px 15px 8px 15px;
-    color: #fff;
-    border: 1px solid white;
     margin-right: 10px;
+    
+    -moz-box-shadow:inset 0px 1px 0px 0px #8c8c8c;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #8c8c8c;
+    
+    box-shadow:inset 0px 1px 0px 0px #8c8c8c;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #4a4a4a),  color-stop(1, #212121) );
+    background:-moz-linear-gradient( center top, #212121 5%, #4a4a4a 100% );
+    
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#212121', endColorstr='#4a4a4a');
+    
+    background-color:#212121;
+    -moz-border-radius:15px;
+    -webkit-border-radius:15px;
+    border-radius:15px;
+    border:1px solid #282c30;
+    display:inline-block;
+    color:#ffffff;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #313233;
+    
+    
 }
 
 .content{
@@ -110,7 +124,7 @@ strong{
     left: 240px;
     overflow: auto;
     
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ebebeb), to(#e0e0e0));
+    /*background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ebebeb), to(#e0e0e0));*/
     background: #ebebeb;
 }
 
@@ -145,11 +159,12 @@ strong{
 }
 
 .content li .profile img{
-    border-radius: 20px;
     margin-top: -20px;
-    /*-webkit-box-shadow: #666 1px 1px 2px 0px inset;
-    -moz-box-shadow: #666 1px 1px 2px 0px inset;*/
     background: url(../images/loader.gif) center center no-repeat;
+    
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
+    border-radius: 20px;
 }
 
 .content li .msg{
@@ -172,10 +187,17 @@ strong{
     display: inline-block;
     background: #fff;
     padding: 8px 12px 5px 10px;
-    border-radius: 5px;
-    -webkit-box-shadow: #999 0 1px 1px 0px;
     background: #fff;
+    
+    background:-moz-linear-gradient( center top, #fff 90%, #ebebeb 100% );
     background: -webkit-gradient(linear, 0% 90%, 0% 100%, from(#fff), to(#ebebeb));
+    
+    -webkit-box-shadow: #999 0 1px 1px 0px;
+    -moz-box-shadow: 0 1px 1px 0px #999 ;
+    
+    -moz-border-radius:20px;
+    -webkit-border-radius:20px;
+    border-radius: 5px;
 }
 
 .content li .msg .body h5{
@@ -212,13 +234,20 @@ strong{
     left: 0;
 }
 
+.input form{
+    position: absolute;
+    right: 18px;
+    left: 6px;
+    top: 6px;
+}
+
 .input input{
     color: #333;
     position: absolute;
     font-family: arial, sans-serif;
     font-size: 14px;
     height: 28px;
-    margin: 6px;
+    /*margin: 6px;*/
     display: block;
     background: #fff;
     border: none;
@@ -228,7 +257,9 @@ strong{
     left: 0;
     top: 0;
     bottom: 0;
+    width: 100%;
     -webkit-box-shadow: #999 0 1px 2px 0px inset;
+    -moz-box-shadow:inset 0px 1px 2px 0px #999;
 }
 
 .menu{
@@ -241,6 +272,7 @@ strong{
     border-right: 1px solid #ccc;
     background: #ebebeb;
     z-index: 4;
+    display: block;
 }
 
 .mobile .menu{
@@ -252,8 +284,17 @@ strong{
     border: none;
     z-index: 4;
 }
+.mobile .menu ul li.active a,
+.mobile .menu ul li a:hover,
+.mobile .menu ul li a{
+    display: block;
+    position: relative;
+    width: auto;
+    border-right: none;
+}
 
 .menu h4{
+    position: relative;
     text-align: left;
     font-size: 12px;
     line-height: 12px;
@@ -263,6 +304,24 @@ strong{
     background: -moz-linear-gradient(100% 100% 90deg, #111, #333);
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#111));
     padding: 8px 10px 8px 10px;
+}
+
+.menu h4 a{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 28px;
+    height: 28px;
+    border-left: 1px solid #111;
+    background: url(../images/add_icon.png) center center no-repeat;
+    background: url(../images/add_icon.png) center center no-repeat, -moz-linear-gradient(100% 100% 90deg, #111, #333);
+    background: url(../images/add_icon.png) center center no-repeat, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#111));   
+}
+
+.menu h4 a:hover{
+    background: url(../images/add_icon.png) center center no-repeat;
+    background: url(../images/add_icon.png) center center no-repeat, -moz-linear-gradient(100% 100% 90deg, #333, #111);
+    background: url(../images/add_icon.png) center center no-repeat, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#111), to(#333));
 }
 
 .menu ul li a{
@@ -278,7 +337,8 @@ strong{
     display: block;
     padding: 12px 15px 12px 15px;
     background: #fff;
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fdfdfd), to(#eeeeee));
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ffffff), to(#eeeeee));
+    background: -moz-linear-gradient(100% 100% 90deg, #eeeeee, #ffffff);
     border-bottom: 1px solid #ccc;
     border-right: 1px solid #ccc;
 }
@@ -301,7 +361,7 @@ strong{
     color: #fff;
     
     background: #121212 url(../images/menu_arrow.png) right center no-repeat;
-    background: -moz-linear-gradient(100% 100% 90deg, #111, #333) url(../images/menu_arrow.png) right center no-repeat;
+    background: url(../images/menu_arrow.png) right center no-repeat, -moz-linear-gradient(100% 100% 90deg, #111, #333);
     background:  url(../images/menu_arrow.png) right center no-repeat, -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#111));
     
     border-bottom: 1px solid #121212;
@@ -312,32 +372,38 @@ strong{
 .menu ul li.active a .count,
 .menu ul li a:hover .count{
     border: 1px solid #65a3ff;
+    border: none;
     background: #65a3ff;
     text-shadow: #000 0 1px 0;
+    padding: 3px 6px 3px 6px;
 }
 
-.menu .create-btn{
+.menu .add-btn{
     margin: 15px 0 10px 0;
     text-transform: none;
     text-decoration: none;
     color: #333;
     font-size: 12px;
-    line-height: 12px;
+    line-height: 14px;
     font-weight: bold;
     display: inline-block;
-    padding: 10px 14px 10px 16px;
+    padding: 10px 14px 10px 14px;
     border-radius: 18px;
     border: 1px solid #ccc;
     background:  -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#eeeeee));
+    background: -moz-linear-gradient(100% 100% 90deg, #eeeeee, #fff);
+    
+    -moz-box-shadow: #ccc 0 1px 2px 0px;
     -webkit-box-shadow: #ccc 0 1px 2px 0px;
 }
 
 .create-btn span{
     background: url(../images/add.png) left center no-repeat;
-    padding-left: 15px;
+    padding: 2px 0 2px 20px;
 }
 
 .create-room,
+.message,
 .login{
     position: relative;
     z-index: 10;
@@ -347,7 +413,9 @@ strong{
     height: 240px;
     margin: -135px 0 0 -135px;
     border-radius: 10px;
-    background:  -webkit-gradient(linear, 0% 0%, 0% 30%, from(#333), to(#111));
+    background: #121212;
+    background: -moz-linear-gradient(100% 100% 90deg, #111, #333);
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#333), to(#111));
     -webkit-box-shadow: #000 0 1px 5px 0px;
     -moz-box-shadow: #000 0 1px 5px 0px;
     padding: 10px 15px 15px 15px;
@@ -358,12 +426,15 @@ strong{
     color: #fff;
     margin: 0 0 5px 0;
 }
+
+.message h4,
 .create-room h4,
 .login h4{
     font-weight: bold;
     text-align: center;
     color: #fff;
     margin: 0 0 10px 0;
+    text-shadow: #000 -1px -1px 0;
 }
 
 .create-room input,
@@ -384,23 +455,7 @@ strong{
     bottom: 0;
     width: 228px;
     -webkit-box-shadow: #999 0 1px 2px 0px inset;
-}
-
-.login button{
-    margin: 10px 0 0 0;
-    float: right;
-    text-transform: none;
-    text-decoration: none;
-    color: #333;
-    font-size: 12px;
-    line-height: 12px;
-    font-weight: bold;
-    display: inline-block;
-    padding: 10px 14px 10px 16px;
-    border-radius: 18px;
-    border: none;
-    background:  -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#eeeeee));
-    -webkit-box-shadow: #000 0 1px 2px 0px;
+    -moz-box-shadow:inset 0px 1px 2px 0px #999;
 }
 
 .login .note{
@@ -420,7 +475,6 @@ strong{
     top: 40px;
     bottom: 40px;
     width: 200px;
-    opacity: .8;
     padding: 0 0 0 0;
     border-left: 1px solid #ccc;
     overflow: hidden;
@@ -496,5 +550,46 @@ strong{
     right: 0;
     background: black;
     z-index: 4;
-    opacity: .7;
+    background: url(../images/cover.png);
+}
+
+button,
+.standard-btn{
+    margin: 15px 5px 10px 0;
+    text-transform: none;
+    text-decoration: none;
+    color: #333;
+    font-size: 12px;
+    line-height: 12px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 8px 14px 8px 14px;
+    border-radius: 15px;
+    border: none;
+    background: -moz-linear-gradient(100% 100% 90deg, #fff, #ccc);
+    background:  -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ccc));
+}
+
+button:hover,
+.standard-btn:hover{
+    background: -moz-linear-gradient(100% 100% 90deg, #ccc, #fff);
+    background:  -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#fff));
+}
+
+.message{
+    display: none;
+    text-align: center;
+    height: 140px;
+    margin: -70px 0 0 -135px;
+
+    z-index: 8;
+}
+
+.message p{
+    text-align: left;
+    display: block;
+    color: #333;
+    background: #fff;
+    border-radius: 5px;
+    padding: 10px;
 }
