--- a/style/master.css
+++ b/style/master.css
@@ -102,8 +102,8 @@ h4{
     
     -moz-box-shadow:inset 0px 1px 0px 0px #8c8c8c;
     -webkit-box-shadow:inset 0px 1px 0px 0px #8c8c8c;
-    
     box-shadow:inset 0px 1px 0px 0px #8c8c8c;
+    
     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #4a4a4a),  color-stop(1, #212121) );
     background:-moz-linear-gradient( center top, #4a4a4a 5%, #212121 100% );
     
@@ -651,4 +651,27 @@ button:hover,
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     border-radius:5px;
+}
+
+.error-message{
+    top: 0;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    max-width: 200px;
+    background: url(../images/error_arrow.png) bottom center no-repeat;
+    padding-bottom: 8px;
+    display: none;
+}
+
+.error-message p{
+    font-size: 12px;
+    color: #993333;
+    padding: 5px 10px 5px 10px;
+    background: #ff9999;
+    
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    border-radius:5px;    
+
 }
