--- a/style/master.css
+++ b/style/master.css
@@ -141,6 +141,10 @@ h4{
     -webkit-transform: translate3d(0,0,0);
 }
 
+.content ul{
+    padding-bottom: 25px;
+}
+
 .contracted .content,
 .mobile .content{
     right: 0;
